fixed column spacing

--- a/Style/base.css
+++ b/Style/base.css
@@ -100,7 +100,7 @@ h2{
 /* For pages with 3 columns */
 .acolumn1 {
 	float: left;
-	margin: 5px 5px 5px 5px;
+	margin: 10px 5px 10px 5px;
 	width: 310px;
 }
 		
@@ -110,7 +110,7 @@ h2{
 }
 	
 .acolumn2 { 
-	margin: 5px 0px 5px 0px;
+	margin: 10px 5px 10px 5px;
 	width: 310px;
 	float: left;
 }
@@ -121,7 +121,7 @@ h2{
 }
 		
 .acolumn3 { 
-	margin: 5px 5px 5px 5px;
+	margin: 10px 5px 10px 5px;
 	width: 310px;
 	float: right;
 	}
@@ -134,7 +134,7 @@ h2{
 /* For pages with 2 columnns */
 .bcolumn1 {
 	float: left;
-	margin: 5px 5px 5px 5px;
+	margin: 10px 5px 10px 5px;
 	width: 470px;
 	height: 100%;
 }
@@ -145,7 +145,7 @@ h2{
 }
 	
 .bcolumn2 { 
-	margin: 5px 0px 5px 0px;
+	margin: 10px 5px 10px 0px;
 	width: 470px;
 	height: 100%;
 	float: left;
